# flutter_rust_bridge_template

./: just_gen_fullter_build.bat  justfile  pubspec.yaml
lib/: bridge_definitions.dart  bridge_generated.dart  bridge_generated.io.dart  bridge_generated.web.dart  main.dart
macos/Runner/: bridge_generated.h
native/: Cargo.toml
native/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  bridge_generated.web.rs
